<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_SystemParams" Id="{4a4ca723-231a-4d08-a570-715762dfcaeb}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	sLogPath : T_MaxString := '\\Vboxsvr\vm_share\LogFile.csv';//'C:\Users\TC-1\Documents\Log\LogFile.csv';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>